2010-10-15  Kirit Saelensminde  <kirit@felspar.com>
 FOST authentication for the server version of requests is now supported.

2010-10-08  Kirit Saelensminde  <kirit@felspar.com>
 fostlib::email_address instances can now be coerced from their JSON representation.
 A new attach member on fostlib::mime_envelope allows for easier addition of mime types into the envelope.
 The MIME type for MIME envelopes can now be set and the iterator for the data is now implemented.
 The SMTP client now tracks its state and doesn't try to close the connection if it's not in a proper idle state.

2010-09-24  Kirit Saelensminde  <kirit@felspar.com>
 Errors connecting to sockets are now reported as instances of fostlib::exceptions::connect_failure. Socket errors are now all sub-classes of fostlib::exceptions::socket_error. Reads now also time out and throw a fostlib::exceptions::read_timout exception. The configuration setting
     [Network settings]
     Read time out=30
 sets the number of seconds that the read time out value should have.

2010-09-19  Kirit Saelensminde  <kirit@felspar.com>
 fostlib::url::query_string objects can now be coerced from fostlib::string objects.

2010-06-02  Kirit Saelensminde  <kirit@felspar.com>
 Fost authentication
 - Fixed the signature so that it signs the query string when there is
   no post data.

2010-05-31  Kirit Saelensminde  <kirit@felspar.com>
 Fost authentication
 - Added a utility function to add the authentication to a user agent.

2010-05-30  Kirit Saelensminde  <kirit@felspar.com>
 Host
 - A host can now be configured with a port number as the service.

2010-04-28  Kirit Saelensminde  <kirit@felspar.com>
 Web server
 - Added the 207 response code
 - URLs may contain bangs (!)

2010-04-06  Kirit Saelensminde  <kirit@felspar.com>
 Parsers
 - Removed the parser instances because they're not thread safe.
 MIME
 - Added support for multiple headers of the same name.
 HTTP client
 - Corrected behaviour for 304 responses.
