@@ -1,3 +1,6 @@
+2010-11-04  Kirit Saelensminde  <kirit@felspar.com>
+ URLs are now usable directly as keys in STL containers as std::less is supported.
+
 2010-10-15  Kirit Saelensminde  <kirit@felspar.com>
  FOST authentication for the server version of requests is now supported.
 
